# tweers

./: Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js
.github/workflows/: rust.yml
examples/: tweet-demo.rs
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/tweers/v2/: trait.V2.js
src/: .lib.rs.rustfmt  client.rs  lib.rs  main.rs  twitter.rs  v1.rs  v2.rs
src/tweers/: client.rs.html  lib.rs.html  v1.rs.html  v2.rs.html
tweers/: all.html  index.html  sidebar-items.js  struct.Client.html  trait.V1.html  trait.V2.html
tweers/client/: struct.Client.html
tweers/v1/: trait.V1.html
tweers/v2/: trait.V2.html
