[package]
name = "tweers"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.7", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.13.0"
serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"
chrono = "0.4.19"
percent-encoding = "2.1.0"
hmac-sha1 = "0.1.3"
async-trait = "0.1.68"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
